Fixed alignment issue under preferences for the German language. Fixes #4014

--- a/web/pgadmin/static/scss/_pgadmin.style.scss
+++ b/web/pgadmin/static/scss/_pgadmin.style.scss
@@ -1131,3 +1131,6 @@ select:-webkit-autofill:focus {
 
 #myDropdown a:hover {background-color: $dropdown-link-hover-bg; color:$white !important;}
 
+.text-wrap {
+  word-break: break-word;
+}
